# mock-ai-interviewer

./: .env.example  .gitignore  README.md  docker-compose.local.yml  docker-compose.yml  push-to-registry.sh  run-local-config.sh  run-local.sh  run-test.sh
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  poetry.toml  pyproject.toml  sa-mock-ai-interviewer.json
backend/alembic/: env.py
backend/alembic/versions/: ce5cc72910fc_initial_migration_after_updating_to_.py
backend/backend/: __init__.py  auth_backend.py  common.py  conf.py  constants.py  dependencies.py  html_templates.py  main.py  sa-mock-ai-interviewer.json  scratch_eleven_labs.py  scratch_gpt.py  scratch_gpt_mongo_interaction.py  settings.py  speech_client.py  websocket_routes.py
backend/backend/converters/: interview.py  interviews.py
backend/backend/db/: README.md
backend/backend/db/dao/: interviews.py  interviews_dao.py
backend/backend/eleven_labs/: client.py
backend/backend/google/: credentials.py  service_account.json
backend/backend/html_templates/: candidate.html  conversation.html  interviewer.html
backend/backend/interfaces/: llm.py  speech_to_text.py  text_to_speech.py
backend/backend/models/: interview.py  interviews.py  llm.py
backend/backend/openai/: client.py  models.py
backend/backend/routers/: base.py  candidate.py  common.py  conversation.py  interview.py  interviewer.py  interviews.py  meetings.py  prompts.py  quizzes.py  websockets.py
backend/backend/routes/: websocket_routes.py
backend/backend/schemas/: interviews.py  models.py
backend/backend/services/: interviews.py  llm.py  tokens.py
backend/backend/spikes/: scratch_eleven_labs.py
backend/db/: __init__.py  models.py  reset.py  seed_data.py
backend/db/sql-scripts/: get-quiz.sql
(+76 files in other folders)
